# bkpmgt

./: .gitignore  Dockerfile  README.md  deepsec_installer.py  docker-compose.prod.yml  docker-compose.yml  pixi.toml  pyproject.toml  requirements.txt  run_server.ps1  run_server.sh
clnt/: bkpmgt.db  clnt.py  config.jsonc  overview.md
clnt/backup_utils/: __init__.py  db_manager.py  handlers.py  schedule_manager.py
clnt/static/: backup_recovery.html  index.html  login.html  styles.css
clnt/sys_utils/: __init__.py  resource_helper.py  sys_config.py  uuid_info.py
installer/: deepsec_installer.py  uuid_info.py
installer/build_scripts/: linux_build.sh  linux_cleanup.sh  windows_build.ps1  windows_cleanup.ps1
srvr/: overview.md  srvr.py
srvr/auth/: __init__.py  routes.py  tokens.py
srvr/backup_recovery/: __init__.py  disaster_recovery.py  dr.jsonc  dr_mon.py  handlers.py  models.py  mongo_setup.py  mut_validations.py  mutations.py  queries.py  s3_helper.py
srvr/backup_recovery/dr_utils/: lastspawn_info.tmp  spawn.sh  uinit.sh
srvr/comms/: __init__.py  conn_manager.py  rmq_manager.py
